--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,20 +9,29 @@
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+		{% block style %}
+			<link rel="stylesheet" href="{{ asset('css/style.css') }}">
 
-		{% block style %}{% endblock %}
+			<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+		{% endblock %}
 
-		{% block script %}{% endblock %}
 	</head>
 	<body>
 		{% include('navbar.html.twig') %}
-		<div
-			class="container-fluid">
-			{# include navabar #}
-			{% block body %}{% endblock %}
-		</div>
-	</body>
-</html>
+
+		<main role="main" class="container-fluid">
+			<div class="row">
+				<div class="col-md-10">
+					<div class="main-div"> {% block body %}{% endblock %}
+						</div>
+					</div>
+				</div>
+			</main>
+			{% block script %}
+				<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+				<script src="{{ asset('js/bootstrap.min.js') }}"></script>
+			{% endblock %}
+		</body>
+	</html>
