--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -11,45 +11,46 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/shop">
 					<i class="fas fa-store"></i>
-					Boutique
+					{{ 'default.navbar.shop' | trans }}
+
 				</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/mi5/fr/panier">
 					<i class="fas fa-shopping-cart"></i>
-					0 Produit(s)
+					{{ 'default.navbar.nbOfProducts' | trans }}
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/mi5/fr/contact">
+				<a class="nav-link" href="/contact">
 					<i class="fas fa-comments"></i>
-					Contact
+					{{ 'default.navbar.contact' | trans }}
 				</a>
 			</li>
 			<li class="nav-item dropdown">
 				<span class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="fas fa-user"></i>
-					Connexion
+					{{ 'default.navbar.connexion' | trans }}
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
 					<a class="dropdown-item " href="/mi5/fr/login">
-						Connexion/Inscription
+						{{ 'default.navbar.register' | trans }}
 					</a>
 					<a class="dropdown-item disabled" href="/mi5/fr/usager/compte">
-						Mon Compte
+						{{ 'default.navbar.myAccount' | trans }}
 					</a>
 					<a class="dropdown-item disabled" href="/mi5/fr/usager/commandes">
-						Mes Commandes
+						{{ 'default.navbar.myOrders' | trans }}
 					</a>
 					<a class="dropdown-item disabled" href="/mi5/fr/logout">
-						Déconnexion
+						{{ 'default.navbar.logout' | trans }}
 					</a>
 				</div>
 			</li>
 			<li class="nav-item" data-toggle="tooltip" title="Ne devra être visible que pour l'Admin" data-placement="right" data-html="true">
 				<span class="nav-link disabled" href="">
 					<i class="fas fa-tools"></i>
-					BackOffice
+					{{ 'default.navbar.backOffice' | trans }}
 				</span>
 			</li>
 		</ul>
