--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -1,67 +1,33 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+
 	<div class="card col-md-12">
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-store"></i>
-				{{ 'shop.shop.backOffice' | trans }}</h1>
+
+				{{  'shop.index.backOffice' | trans }}
+
+			</h1>
 		</div>
 		<div class="card-body row">
-			<div class="col-md-3">
-				<div class="card clickable" onclick="location = '/mi5/fr/boutique/rayon/1'">
-					<img src="/mi5/images/categories/fruits.jpg" class="card-img-top" alt="Fruits">
-					<div class="card-body">
-						<h4 class="card-title">
-							{{ 'shop.shop.fruits' | trans }}
-						</h4>
-						<p class="card-text">
-							<i>
-								{{ 'shop.shop.fruitsMotto' | trans }}</i>
-						</p>
+			{% for category in categories %}
+				<div class="col-md-3">
+					<div class="card clickable" onclick="location = {{'/mi5/fr/boutique/rayon/' ~ category.id }} ">
+						<img src={{ asset(category.image) }} class="card-img-top" alt="Fruits">
+						<div class="card-body">
+							<h4 class="card-title">
+								{{  category.label  }}
+							</h4>
+							<p class="card-text">
+								<i>
+									{{ category.text }}</i>
+							</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="card clickable" onclick="location = '/mi5/fr/boutique/rayon/3'">
-					<img src="/mi5/images/categories/junk_food.jpg" class="card-img-top" alt="Junk Food">
-					<div class="card-body">
-						<h4 class="card-title">
-							{{ 'shop.shop.junkFood' | trans }}
-						</h4>
-						<p class="card-text">
-							<i>{{ 'shop.shop.junkFoodMotto' | trans }}</i>
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="card clickable" onclick="location = '/mi5/fr/boutique/rayon/2'">
-					<img src="/mi5/images/categories/legumes.jpg" class="card-img-top" alt="Légumes">
-					<div class="card-body">
-						<h4 class="card-title">
-							{{ 'shop.shop.vegetables' | trans }}
-						</h4>
-						<p class="card-text">
-							<i>{{ 'shop.shop.vegetablesMotto' | trans }}</i>
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="card clickable" onclick="location = '/mi5/fr/boutique/rayon/4'">
-					<img src="/mi5/images/categories/corona.jpg" class="card-img-top" alt="Virus">
-					<div class="card-body">
-						<h4 class="card-title">
-							{{ 'shop.shop.virus' | trans }}
-						</h4>
-						<p class="card-text">
-							<i>
-								{{ 'shop.shop.virusMotto' | trans }}</i>
-						</p>
-					</div>
-				</div>
-			</div>
+			{% endfor %}
 		</div>
 	</div>
 {% endblock %}
