feat: change persistence with doctrine

--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -18,7 +18,7 @@
 						<img src={{ asset(category.image) }} class="card-img-top" alt="Fruits">
 						<div class="card-body">
 							<h4 class="card-title">
-								{{  category.label  }}
+								{{  category.name  }}
 							</h4>
 							<p class="card-text">
 								<i>
