fix(images): style of some images

--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -9,7 +9,7 @@
 		</div>
 		<div class="card-body">
 			<div class="card clickable" onclick="window.open('https://www-info.iut2.univ-grenoble-alpes.fr/licence-pro-mi/')">
-				<img src="/mi5/images/iut2_info.png" class="card-img" alt="logo IUT2">
+				<img src={{asset("images/iut2_info.png")}} class="card-img" alt="logo IUT2">
 				<div class="card-body">
 					<h1 class="card-title">
 						<i class="fas fa-code"></i>
