--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ a:hover {
 
 .card-img {
   height: 300px;
-  width: auto;
+  width: auto !important;
   display: block;
   margin-top: 10px;
   margin-left: auto;
