--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -11,7 +11,7 @@
 		</div>
 		<div class="card-body">
 			<div class="card clickable" onclick="location = '/mi5/fr/boutique'">
-				<img src="/mi5/images/epicerie.jpg" class="card-img-top" alt="Logo Boutique Symfony"/>
+				<img src={{asset("images/epicerie.jpg")}} class="card-img-top" alt="Logo Boutique Symfony"/>
 				<div class="card-body">
 					<p class="card-text">
 						<i>
