--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -14,7 +14,7 @@
 		<div class="card-body row">
 			{% for category in categories %}
 				<div class="col-md-3">
-					<div class="card clickable" onclick="location = {{'/mi5/fr/boutique/rayon/' ~ category.id }} ">
+					<div class="card clickable" onclick={{"location='/shop/department/" ~ category.id ~ "'"}}>
 						<img src={{ asset(category.image) }} class="card-img-top" alt="Fruits">
 						<div class="card-body">
 							<h4 class="card-title">
