--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -16,7 +16,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/mi5/fr/panier">
+				<a class="nav-link" href="/cart">
 					<i class="fas fa-shopping-cart"></i>
 					{{ 'default.navbar.nbOfProducts' | trans }}
 				</a>
@@ -33,10 +33,10 @@
 					{{ 'default.navbar.connexion' | trans }}
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item " href="/mi5/fr/login">
+					<a class="dropdown-item " href="/user/new">
 						{{ 'default.navbar.register' | trans }}
 					</a>
-					<a class="dropdown-item disabled" href="/mi5/fr/usager/compte">
+					<a class="dropdown-item" href="/user">
 						{{ 'default.navbar.myAccount' | trans }}
 					</a>
 					<a class="dropdown-item disabled" href="/mi5/fr/usager/commandes">
