--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ a:hover {
 
 .card-img {
   height: 300px;
-  width: auto !important;
+  width: auto;
   display: block;
   margin-top: 10px;
   margin-left: auto;
@@ -56,4 +56,22 @@ td {
   vertical-align: middle !important;
   padding-top: 4px !important;
   padding-bottom: 4px !important;
+}
+
+.BDC_CaptchaDiv {
+  margin: auto;
+  display: inline;
+}
+
+.BDC_Placeholder {
+  min-height: 10px !important;
+}
+
+.BDC_CaptchaImageDiv > a {
+  opacity: 0%;
+  cursor: default;
+}
+
+#ExampleCaptcha_CaptchaImage {
+  margin-top: 5px;
 }
