--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -9,12 +9,79 @@
 				0 Produit(s) :
 				<b>0,00 €</b>
 			</h1>
-			<div class="col-md-12 btn-group btn-group-lg" role="group">
-				<a class="btn btn-primary" href="/mi5/fr/boutique">
-					Continuer les Courses
-				</a>
+			{# TODO: Check if products exist or not empty #}
+			<div class="card-body">
+				<div class="row">
+					<table class="table table-striped table-sm table-hover">
+						<thead>
+							<tr>
+								<th></th>
+								<th>Produit</th>
+								<th class="text-right">Prix</th>
+								<th>Quantite</th>
+								<th class="text-right">Total</th>
+								<th>Supprimer</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for product in products  %}
+								<tr>
+									<td>
+										<img src={{ asset(product.product.image) }} class="cart-img-produit" alt="Pêche">
+									</td>
+									<td>
+										<a href={{"/shop/department/" ~ product.product.id }}>
+											<b>{{ product.product.name }}</b>
+										</a>
+									</td>
+									<td class="text-right">
+										{{ product.product.price }}
+										€
+									</td>
+									<td>
+										<a href={{"/cart/remove/" ~ product.product.id ~ "/1"}}>
+											<i class="fas fa-minus-square text"></i>
+										</a>
+										{{ product.quantity }}
+										<a href={{"/cart/add/" ~ product.product.id ~ "/1"}}>
+											<i class="fas fa-plus-square text-muted"></i>
+										</a>
+									</td>
+									<td class="text-right">
+										{{ product.product.price * product.quantity }}
+										€
+									</td>
+									<td>
+										<a href="/cart/delete/3">
+											<i class="fas fa-trash text-muted" data-toggle="tooltip" title="Supprimer Pêche" data-placement="right" data-html="true"></i>
+										</a>
+									</td>
+								</tr>
+							{% endfor %}
+						</tbody>
+						<thead>
+							<tr>
+								<th class="text-right" colspan="4">
+									Total
+								</th>
+								<th class="text-right">
+									2,84 €
+								</th>
+								<th>
+									<a href="/mi5/fr/panier/vider">
+										<i class="fas fa-trash text-muted" data-toggle="tooltip" title="Vider le Panier" data-placement="right" data-html="true"></i>
+									</a>
+								</th>
+							</tr>
+						</thead>
+					</table>
+				</div>
+				<div class="col-md-12 btn-group btn-group-lg" role="group">
+					<a class="btn btn-primary" href="/mi5/fr/boutique">
+						Continuer les Courses
+					</a>
+				</div>
 			</div>
+			<div class="card-body"></div>
 		</div>
-		<div class="card-body"></div>
-	</div>
-{% endblock %}
+	{% endblock %}
