--- a/templates/department.html.twig
+++ b/templates/department.html.twig
@@ -10,7 +10,7 @@
 		<div class="card-body row">
 			{% for product in products %}
 				<div class="col-md-4">
-					<div class="card clickable" onclick="location = '/mi5/fr/panier/ajouter/3'">
+					<div class="card clickable" onclick={{"location='/cart/add/" ~ product.id ~ "/1'"}}>
 						<img src={{asset(product.image)}} class="card-img-produit" alt={{product.name}}>
 						<div class="card-body">
 							<h4 class="card-title">{{product.name}}</h4>
@@ -20,7 +20,7 @@
 							<h2>
 								<span class="badge badge-primary">
 									<i class="fas fa-cart-plus"></i>&nbsp;&nbsp;
-																																																																																																												                                    2,84 €
+																																																																																																																																										                                    2,84 €
 								</span>
 							</h2>
 						</div>
