--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,3 +1,5 @@
+{% set disableIfNotConnected = app.user ? "" : "disabled" %}
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	<a class="navbar-brand" href="/">
 		<i class="fas fa-home"></i>
@@ -36,23 +38,25 @@
 					<a class="dropdown-item " href="/user/new">
 						{{ 'default.navbar.register' | trans }}
 					</a>
-					<a class="dropdown-item" href="/user">
-						{{ 'default.navbar.myAccount' | trans }}
+					<a class="dropdown-item {{disableIfNotConnected}}" href="/user">
+						{{ 'default.navbar.myAccount'  | trans }}
 					</a>
-					<a class="dropdown-item disabled" href="/mi5/fr/usager/commandes">
+					<a class="dropdown-item {{disableIfNotConnected}}" href="/mi5/fr/usager/commandes">
 						{{ 'default.navbar.myOrders' | trans }}
 					</a>
-					<a class="dropdown-item disabled" href="/mi5/fr/logout">
+					<a class="dropdown-item {{disableIfNotConnected}}" href="/mi5/fr/logout">
 						{{ 'default.navbar.logout' | trans }}
 					</a>
 				</div>
 			</li>
-			<li class="nav-item" data-toggle="tooltip" title="Ne devra être visible que pour l'Admin" data-placement="right" data-html="true">
-				<span class="nav-link disabled" href="">
-					<i class="fas fa-tools"></i>
-					{{ 'default.navbar.backOffice' | trans }}
-				</span>
-			</li>
+			{% if is_granted('ROLE_ADMIN') %}
+				<li class="nav-item" data-toggle="tooltip" title="Ne devra être visible que pour l'Admin" data-placement="right" data-html="true">
+					<span class="nav-link disabled" href="">
+						<i class="fas fa-tools"></i>
+						{{ 'default.navbar.backOffice' | trans }}
+					</span>
+				</li>
+			{% endif %}
 		</ul>
 		<form class="form-inline my-2 my-lg-0">
 			<input class="form-control mr-sm-2" id="searchString" type="text" placeholder="Chercher Produits..." aria-label="Search">
