--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -59,21 +59,23 @@
 								</tr>
 							{% endfor %}
 						</tbody>
-						<thead>
-							<tr>
-								<th class="text-right" colspan="4">
-									Total
-								</th>
-								<th class="text-right">
-									2,84 €
-								</th>
-								<th>
-									<a href="/mi5/fr/panier/vider">
-										<i class="fas fa-trash text-muted" data-toggle="tooltip" title="Vider le Panier" data-placement="right" data-html="true"></i>
-									</a>
-								</th>
-							</tr>
-						</thead>
+						{% if products|length > 0 %}
+							<thead>
+								<tr>
+									<th class="text-right" colspan="4">
+										Total
+									</th>
+									<th class="text-right">
+										2,84 €
+									</th>
+									<th>
+										<a href={{ "/cart/clear" }}>
+											<i class="fas fa-trash text-muted" data-toggle="tooltip" title="Vider le Panier" data-placement="right" data-html="true"></i>
+										</a>
+									</th>
+								</tr>
+							</thead>
+						{% endif %}
 					</table>
 				</div>
 				<div class="col-md-12 btn-group btn-group-lg" role="group">
