--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -66,7 +66,8 @@
 										Total
 									</th>
 									<th class="text-right">
-										2,84 €
+										{{ total }}
+										€
 									</th>
 									<th>
 										<a href={{ "/cart/clear" }}>
