feat: display number of products

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -6,8 +6,10 @@
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-shopping-cart"></i>
-				0 Produit(s) :
-				<b>0,00 €</b>
+				{{ nbProducts }}
+				Produit(s) :
+				<b>{{ total }}
+					€</b>
 			</h1>
 			{# TODO: Check if products exist or not empty #}
 			<div class="card-body">
