--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -20,7 +20,7 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/cart">
 					<i class="fas fa-shopping-cart"></i>
-					{{ 'default.navbar.nbOfProducts' | trans }}
+					{{ nbProducts ~ 'default.navbar.nbOfProducts' | trans }}
 				</a>
 			</li>
 			<li class="nav-item">
