--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -32,7 +32,7 @@
 					{{ 'default.navbar.connexion' | trans }}
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item " href="/user/new">
+					<a class="dropdown-item " href="/login">
 						{{ 'default.navbar.register' | trans }}
 					</a>
 					<a class="dropdown-item {{disableIfNotConnected}}" href="/user">
@@ -41,7 +41,7 @@
 					<a class="dropdown-item {{disableIfNotConnected}}" href="/mi5/fr/usager/commandes">
 						{{ 'default.navbar.myOrders' | trans }}
 					</a>
-					<a class="dropdown-item {{disableIfNotConnected}}" href="/mi5/fr/logout">
+					<a class="dropdown-item {{disableIfNotConnected}}" href="/logout">
 						{{ 'default.navbar.logout' | trans }}
 					</a>
 				</div>
