--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,28 +4,47 @@
 {% endblock %}
 
 {% block body %}
-	<h1>User index</h1>
 
-	<table class="table">
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>FirstName</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for user in users %}
-				<tr>
-					<td>{{ user.name }}</td>
-					<td>{{ user.firstName }}</td>
-				</tr>
-			{% else %}
-				<tr>
-					<td colspan="7">no records found</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+	{% if app.user %}
+		<div class="col-8 offset-2">
+			<div class="card">
+				<div class="card-header">
+					<h3>
+						<i class="fas fa-user-check"></i>
+						Mon Compte</h3>
+				</div>
+				<div class="card-body">
+					<table class="table table-striped table-sm table-hover">
+						<tr>
+							<th>N° Client</th>
+							<td>{{ app.user.id }}</td>
+						</tr>
+						<tr>
+							<th>Nom</th>
+							<td>{{ app.user.name }}</td>
+						</tr>
+						<tr>
+							<th>Prénom</th>
+							<td>{{ app.user.firstName }}</td>
+						</tr>
+						<tr>
+							<th>Email</th>
+							<td>{{ app.user.email }}</td>
+						</tr>
+						<tr>
+							<th>Activité</th>
+							<td>
+								<a class="btn btn-primary" href="/user/orders">
+									<span class="badge badge-light">0</span>
+									Commande(s)
+								</a>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
 
-	<a href="{{ path('user_new') }}">Create new</a>
+		<a href="{{ path('user_new') }}">Create new</a>
+	{% endif %}
 {% endblock %}
