--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -6,62 +6,79 @@
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-shopping-cart"></i>
-				{{ nbProducts }}
-				Produit(s) :
-				<b>{{ total }}
-					€</b>
+				{% if products|length > 0 %}
+
+					{{ nbProducts }}
+					Produit(s) :
+					<b>{{ total }}
+						€</b>
+				{% else %}
+					<b>Votre panier est vide</b>
+				{% endif %}
 			</h1>
+			<div class="col-md-12 btn-group btn-group-lg" role="group">
+				<a class="btn btn-primary" href="/shop">
+					Continuer les Courses
+				</a>
+				{% if products|length > 0 %}
+					<a class="btn btn-primary" href="/cart/validation">
+						Passer la commande
+					</a>
+				{% endif %}
+			</div>
 			{# TODO: Check if products exist or not empty #}
+
 			<div class="card-body">
-				<div class="row">
-					<table class="table table-striped table-sm table-hover">
-						<thead>
-							<tr>
-								<th></th>
-								<th>Produit</th>
-								<th class="text-right">Prix</th>
-								<th>Quantite</th>
-								<th class="text-right">Total</th>
-								<th>Supprimer</th>
-							</tr>
-						</thead>
-						<tbody>
-							{% for product in products  %}
+				{% if products|length > 0 %}
+					<div class="row">
+
+						<table class="table table-striped table-sm table-hover">
+							<thead>
 								<tr>
-									<td>
-										<img src={{ asset(product.product.image) }} class="cart-img-produit" alt="Pêche">
-									</td>
-									<td>
-										<a href={{"/shop/department/" ~ product.product.id }}>
-											<b>{{ product.product.name }}</b>
-										</a>
-									</td>
-									<td class="text-right">
-										{{ product.product.price }}
-										€
-									</td>
-									<td>
-										<a href={{"/cart/remove/" ~ product.product.id ~ "/1"}}>
-											<i class="fas fa-minus-square text"></i>
-										</a>
-										{{ product.quantity }}
-										<a href={{"/cart/add/" ~ product.product.id ~ "/1"}}>
-											<i class="fas fa-plus-square text-muted"></i>
-										</a>
-									</td>
-									<td class="text-right">
-										{{ product.product.price * product.quantity }}
-										€
-									</td>
-									<td>
-										<a href={{ "/cart/delete/" ~ product.product.id }}>
-											<i class="fas fa-trash text-muted" data-toggle="tooltip" title={{ "Supprimer " ~ product.product.name }} data-placement="right" data-html="true"></i>
-										</a>
-									</td>
+									<th></th>
+									<th>Produit</th>
+									<th class="text-right">Prix</th>
+									<th>Quantite</th>
+									<th class="text-right">Total</th>
+									<th>Supprimer</th>
 								</tr>
-							{% endfor %}
-						</tbody>
-						{% if products|length > 0 %}
+							</thead>
+							<tbody>
+								{% for product in products  %}
+									<tr>
+										<td>
+											<img src={{ asset(product.product.image) }} class="cart-img-produit" alt="Pêche">
+										</td>
+										<td>
+											<a href={{"/shop/department/" ~ product.product.id }}>
+												<b>{{ product.product.name }}</b>
+											</a>
+										</td>
+										<td class="text-right">
+											{{ product.product.price }}
+											€
+										</td>
+										<td>
+											<a href={{"/cart/remove/" ~ product.product.id ~ "/1"}}>
+												<i class="fas fa-minus-square text"></i>
+											</a>
+											{{ product.quantity }}
+											<a href={{"/cart/add/" ~ product.product.id ~ "/1"}}>
+												<i class="fas fa-plus-square text-muted"></i>
+											</a>
+										</td>
+										<td class="text-right">
+											{{ product.product.price * product.quantity }}
+											€
+										</td>
+										<td>
+											<a href={{ "/cart/delete/" ~ product.product.id }}>
+												<i class="fas fa-trash text-muted" data-toggle="tooltip" title={{ "Supprimer " ~ product.product.name }} data-placement="right" data-html="true"></i>
+											</a>
+										</td>
+									</tr>
+								{% endfor %}
+							</tbody>
 							<thead>
 								<tr>
 									<th class="text-right" colspan="4">
@@ -80,11 +97,6 @@
 							</thead>
 						{% endif %}
 					</table>
-				</div>
-				<div class="col-md-12 btn-group btn-group-lg" role="group">
-					<a class="btn btn-primary" href="/mi5/fr/boutique">
-						Continuer les Courses
-					</a>
 				</div>
 			</div>
 			<div class="card-body"></div>
