--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -28,8 +28,13 @@
 			</li>
 			<li class="nav-item dropdown">
 				<span class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<i class="fas fa-user"></i>
-					{{ 'default.navbar.connexion' | trans }}
+					{% if app.user %}
+						<i class="fas fa-user-check"></i>
+						{{ app.user.name }}
+					{% else %}
+						<i class="fas fa-user"></i>
+						{{ 'default.navbar.connexion' | trans }}
+					{% endif %}
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
 					<a class="dropdown-item " href="/login">
