--- a/templates/cart/nbProducts.html.twig
+++ b/templates/cart/nbProducts.html.twig
@@ -2,5 +2,5 @@
 
 <a class="nav-link" href="/cart">
 	<i class="fas fa-shopping-cart"></i>
-	{{ nbProducts ~ 'default.navbar.nbOfProducts' | trans }}
+	{{ nbProducts ~ ('default.navbar.nbOfProducts'|trans) }}
 </a>
