--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -1,14 +1,11 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-
 	<div class="card col-md-12">
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-store"></i>
-
 				{{  'shop.index.backOffice' | trans }}
-
 			</h1>
 		</div>
 		<div class="card-body row">
@@ -22,7 +19,8 @@
 							</h4>
 							<p class="card-text">
 								<i>
-									{{ category.text }}</i>
+									{{ category.text }}
+								</i>
 							</p>
 						</div>
 					</div>
