--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -5,7 +5,8 @@
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-comments"></i>
-				Contact</h1>
+				Contact
+			</h1>
 		</div>
 		<div class="card-body">
 			<div class="card clickable" onclick="window.open('https://www-info.iut2.univ-grenoble-alpes.fr/licence-pro-mi/')">
@@ -13,13 +14,16 @@
 				<div class="card-body">
 					<h1 class="card-title">
 						<i class="fas fa-code"></i>
-						Licence Pro MI AW</h1>
+						Licence Pro MI AW
+					</h1>
 					<h2 class="card-title">
 						<i class="fab fa-symfony"></i>
-						Module MI5</h2>
+						Module MI5
+					</h2>
 					<p>
 						<i class="far fa-copyright"></i>
-						Ph. Martin, 2019/20</p>
+						Ph. Martin, 2019/20
+					</p>
 				</div>
 			</div>
 		</div>
