--- a/templates/department.html.twig
+++ b/templates/department.html.twig
@@ -5,7 +5,15 @@
 		<div class="card-header">
 			<h1>
 				<i class="fas fa-store"></i>
-				Rayon &quot;{{category.name}}&quot; : 3 Produit(s)</h1>
+				{% if search is defined %}
+					{{ "Recherche \"" ~ search ~ "\"" }}
+				{% else %}
+					{{ "Rayon \"" ~ category.name ~ "\"" }}
+				{% endif %}
+				:
+				{{ nbProducts }}
+				Produit(s)
+			</h1>
 		</div>
 		<div class="card-body row">
 			{% for product in products %}
@@ -19,8 +27,7 @@
 							</p>
 							<h2>
 								<span class="badge badge-primary">
-									<i class="fas fa-cart-plus"></i>&nbsp;&nbsp;
-																																																																																																																																										                                    2,84 €
+									<i class="fas fa-cart-plus"></i>&nbsp;&nbsp;																																																																																																																																																																																																			                                    2,84 €
 								</span>
 							</h2>
 						</div>
@@ -29,5 +36,4 @@
 			{% endfor %}
 		</div>
 	</div>
-
 {% endblock %}
