--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,4 +1,4 @@
-{% set disableIfNotConnected = app.user ? "" : "disabled" %}
+{% set disableIfNotConnected = app.user ? '' : 'disabled' %}
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	<a class="navbar-brand" href="/">
@@ -13,17 +13,14 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/shop">
 					<i class="fas fa-store"></i>
-					{{ 'default.navbar.shop' | trans }}
-
+					{{ 'default.navbar.shop'|trans }}
 				</a>
 			</li>
-			<li class="nav-item">
-				{{ render(controller('App\\Controller\\CartController::nbProducts')) }}
-			</li>
+			<li class="nav-item">{{ render(controller('App\\Controller\\CartController::nbProducts')) }}</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/contact">
 					<i class="fas fa-comments"></i>
-					{{ 'default.navbar.contact' | trans }}
+					{{ 'default.navbar.contact'|trans }}
 				</a>
 			</li>
 			<li class="nav-item dropdown">
@@ -33,21 +30,19 @@
 						{{ app.user.name }}
 					{% else %}
 						<i class="fas fa-user"></i>
-						{{ 'default.navbar.connexion' | trans }}
+						{{ 'default.navbar.connexion'|trans }}
 					{% endif %}
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item " href="/login">
-						{{ 'default.navbar.register' | trans }}
+					<a class="dropdown-item" href="/login">{{ 'default.navbar.register'|trans }}</a>
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="/user">
+						{{ 'default.navbar.myAccount'|trans }}
 					</a>
-					<a class="dropdown-item {{disableIfNotConnected}}" href="/user">
-						{{ 'default.navbar.myAccount'  | trans }}
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="/mi5/fr/usager/commandes">
+						{{ 'default.navbar.myOrders'|trans }}
 					</a>
-					<a class="dropdown-item {{disableIfNotConnected}}" href="/mi5/fr/usager/commandes">
-						{{ 'default.navbar.myOrders' | trans }}
-					</a>
-					<a class="dropdown-item {{disableIfNotConnected}}" href="/logout">
-						{{ 'default.navbar.logout' | trans }}
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="/logout">
+						{{ 'default.navbar.logout'|trans }}
 					</a>
 				</div>
 			</li>
@@ -55,13 +50,13 @@
 				<li class="nav-item" data-toggle="tooltip" title="Ne devra être visible que pour l'Admin" data-placement="right" data-html="true">
 					<span class="nav-link disabled" href="">
 						<i class="fas fa-tools"></i>
-						{{ 'default.navbar.backOffice' | trans }}
+						{{ 'default.navbar.backOffice'|trans }}
 					</span>
 				</li>
 			{% endif %}
 		</ul>
 		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" id="searchString" type="text" placeholder="Chercher Produits..." aria-label="Search">
+			<input class="form-control mr-sm-2" name="searchString" id="searchString" type="text" placeholder="Chercher Produits..." aria-label="Search"/>
 			<button class="btn btn-secondary my-2 my-sm-0" id="searchButton">
 				<i class="fas fa-search"></i>
 			</button>
@@ -93,11 +88,11 @@
 		<ul class="navbar-nav my-0">
 			<li class="nav-item dropdown">
 				<span class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<img src="/mi5/images/locale/fr.png" alt="Fr">
+					<img src="/mi5/images/locale/fr.png" alt="Fr"/>
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown03" style="min-width: 5rem;">
 					<a class="dropdown-item" href="/mi5/en/boutique">
-						<img src="/mi5/images/locale/en.png" alt="En">
+						<img src="/mi5/images/locale/en.png" alt="En"/>
 					</a>
 				</div>
 			</li>
