--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion
+{% block title %}
+	Connexion
 {% endblock %}
 
 {% block body %}
@@ -8,12 +9,15 @@
 		<div class="card-header">
 			<h3>
 				<i class="fas fa-user-plus"></i>
-				Se connecter</h3>
+				Se connecter
+			</h3>
 		</div>
 		<div class="card-body">
 			<form method="post">
 				{% if error %}
-					<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+					<div class="alert alert-danger">
+						{{ error.messageKey|trans(error.messageData, 'security') }}
+					</div>
 				{% endif %}
 
 				{% if app.user %}
@@ -25,18 +29,14 @@
 				{% endif %}
 
 				<label for="inputEmail">Email</label>
-				<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+				<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus/>
 				<label for="inputPassword">Mot de passe</label>
-				<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+				<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required/>
 
-				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
 
-
-				<button class="btn btn-lg btn-primary" type="submit">
-					Sign in
-				</button>
+				<button class="btn btn-lg btn-primary" type="submit">Sign in</button>
 			</form>
 		</div>
 	</div>
-
 {% endblock %}
