--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,38 +1,57 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index
+{% block title %}
+	User index
 {% endblock %}
 
 {% block body %}
-
 	{% if app.user %}
 		<div class="col-8 offset-2">
 			<div class="card">
 				<div class="card-header">
 					<h3>
 						<i class="fas fa-user-check"></i>
-						Mon Compte</h3>
+						Mon Compte
+					</h3>
 				</div>
 				<div class="card-body">
 					<table class="table table-striped table-sm table-hover">
 						<tr>
-							<th>N° Client</th>
-							<td>{{ app.user.id }}</td>
+							<th>
+								N° Client
+							</th>
+							<td>
+								{{ app.user.id }}
+							</td>
 						</tr>
 						<tr>
-							<th>Nom</th>
-							<td>{{ app.user.name }}</td>
+							<th>
+								Nom
+							</th>
+							<td>
+								{{ app.user.name }}
+							</td>
 						</tr>
 						<tr>
-							<th>Prénom</th>
-							<td>{{ app.user.firstName }}</td>
+							<th>
+								Prénom
+							</th>
+							<td>
+								{{ app.user.firstName }}
+							</td>
 						</tr>
 						<tr>
-							<th>Email</th>
-							<td>{{ app.user.email }}</td>
+							<th>
+								Email
+							</th>
+							<td>
+								{{ app.user.email }}
+							</td>
 						</tr>
 						<tr>
-							<th>Activité</th>
+							<th>
+								Activité
+							</th>
 							<td>
 								<a class="btn btn-primary" href="/user/orders">
 									<span class="badge badge-light">0</span>
@@ -44,7 +63,6 @@
 				</div>
 			</div>
 		</div>
-
 		<a href="{{ path('user_new') }}">Create new</a>
 	{% endif %}
 {% endblock %}
