--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User
+{% block title %}
+	New User
 {% endblock %}
 
 {% block body %}
-	<h1>Create new User</h1>
+	<h1>
+		Create new User
+	</h1>
 
 	{{ include('user/_form.html.twig') }}
-
 {% endblock %}
