--- a/templates/user/orders.html.twig
+++ b/templates/user/orders.html.twig
@@ -7,7 +7,8 @@
 			<div class="card-header">
 				<h3>
 					<i class="fas fa-user-check"></i>
-					Mes Commandes</h3>
+					Mes Commandes
+				</h3>
 			</div>
 			<div class="card-body">
 				<table class="table table-striped table-sm table-hover">
@@ -16,7 +17,6 @@
 							<th>N°</th>
 							<th>Date</th>
 							<th>Statut</th>
-
 						</tr>
 					</thead>
 					<tbody>
