refactor(templates): use path to return the relative url of the given route

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -14,11 +14,11 @@
 				{% endif %}
 			</h1>
 			<div class="col-md-12 btn-group btn-group-lg" role="group">
-				<a class="btn btn-primary" href="/shop">
+				<a class="btn btn-primary" href="{{ path('shop_index') }}">
 					Continuer les Courses
 				</a>
 				{% if products|length > 0 %}
-					<a class="btn btn-primary" href="/cart/validation">
+					<a class="btn btn-primary" href="{{ path('cart_validation') }}">
 						Passer la commande
 					</a>
 				{% endif %}
@@ -47,7 +47,7 @@
 											<img src={{ asset(product.product.image) }} class="cart-img-produit" alt="Pêche">
 										</td>
 										<td>
-											<a href={{"/shop/department/" ~ product.product.id }}>
+											<a href={{ path('shop_department', { categoryId: product.product.getCategory().getId() } ) }}>
 												<b>{{ product.product.name }}</b>
 											</a>
 										</td>
@@ -56,11 +56,11 @@
 											€
 										</td>
 										<td>
-											<a href={{"/cart/remove/" ~ product.product.id ~ "/1"}}>
+											<a href={{path("cart_remove",{productId: product.product.id , quantity: "1"} )}}>
 												<i class="fas fa-minus-square text"></i>
 											</a>
 											{{ product.quantity }}
-											<a href={{"/cart/add/" ~ product.product.id ~ "/1"}}>
+											<a href={{path("cart_add",{productId: product.product.id , quantity: "1"} )}}>
 												<i class="fas fa-plus-square text-muted"></i>
 											</a>
 										</td>
@@ -69,7 +69,7 @@
 											€
 										</td>
 										<td>
-											<a href={{ "/cart/delete/" ~ product.product.id }}>
+											<a href={{ path("cart_delete", {productId: product.product.id} ) }}>
 												<i class="fas fa-trash text-muted" data-toggle="tooltip" title={{ "Supprimer " ~ product.product.name }} data-placement="right" data-html="true"></i>
 											</a>
 										</td>
@@ -86,7 +86,7 @@
 										€
 									</th>
 									<th>
-										<a href={{ "/cart/clear" }}>
+										<a href={{ path('cart_clear') }}>
 											<i class="fas fa-trash text-muted" data-toggle="tooltip" title="Vider le Panier" data-placement="right" data-html="true"></i>
 										</a>
 									</th>
