--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -13,14 +13,14 @@
 	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="/shop">
+				<a class="nav-link" href="{{ path('shop_index') }}">
 					<i class="fas fa-store"></i>
 					{{ 'default.navbar.shop'|trans }}
 				</a>
 			</li>
 			<li class="nav-item">{{ render(controller('App\\Controller\\CartController::nbProducts')) }}</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/contact">
+				<a class="nav-link" href="{{ path('contact_index') }}">
 					<i class="fas fa-comments"></i>
 					{{ 'default.navbar.contact'|trans }}
 				</a>
@@ -36,22 +36,21 @@
 					{% endif %}
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown01">
-					<a class="dropdown-item" href="/login">{{ 'default.navbar.register'|trans }}</a>
-					<a class="dropdown-item {{ disableIfNotConnected }}" href="/user">
+					<a class="dropdown-item" href="{{ path('app_login') }}">{{ 'default.navbar.register'|trans }}</a>
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="{{ path('user_index') }}">
 						{{ 'default.navbar.myAccount'|trans }}
 					</a>
-					<a class="dropdown-item {{ disableIfNotConnected }}" href="/mi5/fr/usager/commandes">
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="{{ path('user_orders') }}">
 						{{ 'default.navbar.myOrders'|trans }}
 					</a>
-					<a class="dropdown-item {{ disableIfNotConnected }}" href="/logout">
+					<a class="dropdown-item {{ disableIfNotConnected }}" href="{{ path('app_logout') }}">
 						{{ 'default.navbar.logout'|trans }}
 					</a>
 				</div>
 			</li>
 			{% if is_granted('ROLE_ADMIN') %}
 				<li class="nav-item" data-toggle="tooltip" title="Ne devra être visible que pour l'Admin" data-placement="right" data-html="true">
-					<span class="nav-link disabled" href="">
-						<i class="fas fa-tools"></i>
+					<span class="nav-link disabled" href="-tools">
 						{{ 'default.navbar.backOffice'|trans }}
 					</span>
 				</li>
@@ -69,19 +68,19 @@
 					EUR
 				</span>
 				<div class="dropdown-menu" aria-labelledby="dropdown02" style="min-width: 5rem;">
-					<a class="dropdown-item" href="/mi5/fr/changer_monnaie/CAD/boutique_index/%7B%22_locale%22:%22fr%22%7D">
+					<a class="dropdown-item" href="">
 						CAD
 					</a>
-					<a class="dropdown-item" href="/mi5/fr/changer_monnaie/USD/boutique_index/%7B%22_locale%22:%22fr%22%7D">
+					<a class="dropdown-item" href="">
 						USD
 					</a>
-					<a class="dropdown-item" href="/mi5/fr/changer_monnaie/GBP/boutique_index/%7B%22_locale%22:%22fr%22%7D">
+					<a class="dropdown-item" href="">
 						GBP
 					</a>
-					<a class="dropdown-item" href="/mi5/fr/changer_monnaie/PHP/boutique_index/%7B%22_locale%22:%22fr%22%7D">
+					<a class="dropdown-item" href="">
 						PHP
 					</a>
-					<a class="dropdown-item" href="/mi5/fr/changer_monnaie/IDR/boutique_index/%7B%22_locale%22:%22fr%22%7D">
+					<a class="dropdown-item" href="">
 						IDR
 					</a>
 				</div>
