--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -53,7 +53,7 @@
 								Activité
 							</th>
 							<td>
-								<a class="btn btn-primary" href="/user/orders">
+								<a class="btn btn-primary" href="{{ path('user_orders') }}">
 									<span class="badge badge-light">0</span>
 									Commande(s)
 								</a>
