--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,7 +10,7 @@
 			</h1>
 		</div>
 		<div class="card-body">
-			<div class="card clickable" onclick={{"location='/shop'"}}>
+			<div class="card clickable" onclick={{"location='/" ~ app.request.attributes.get('_locale') ~ "/shop'"}}>
 				<img src={{asset("images/epicerie.jpg")}} class="card-img-top" alt="Logo Boutique Symfony"/>
 				<div class="card-body">
 					<p class="card-text">
