--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -6,12 +6,14 @@
 			<h1>
 				<i class="fas fa-store"></i>
 				{{  'shop.index.backOffice' | trans }}
+				{{ nbCategories }}
+				Catégories
 			</h1>
 		</div>
 		<div class="card-body row">
 			{% for category in categories %}
 				<div class="col-md-3">
-					<div class="card clickable" onclick={{"location='/shop/department/" ~ category.id ~ "'"}}>
+					<div class="card clickable" onclick={{"location='/" ~ app.request.attributes.get('_locale') ~ "/shop/department/" ~ category.id ~ "'"}}>
 						<img src={{ asset(category.image) }} class="card-img-top" alt="Fruits">
 						<div class="card-body">
 							<h4 class="card-title">
