feat(templates): add title for each template

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	User index
+	Mon compte
 {% endblock %}
 
 {% set userOrders = app.user.getOrders() %}
