--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8"/>
 		<title>
 			{% block title %}
-				Bienvenue!
+				Accueil
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
