--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+	Panier
+{% endblock %}
 {% block body %}
 	<div class="card col-md-12">
 		<div class="card-header">
