--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,5 +1,8 @@
 {% extends "base.html.twig" %}
 
+{% block title %}
+	Contact
+{% endblock %}
 {% block body %}
 	<div class="card col-md-6 offset-3">
 		<div class="card-header">
