--- a/templates/department.html.twig
+++ b/templates/department.html.twig
@@ -1,5 +1,8 @@
 {% extends "base.html.twig" %}
-
+{% block title %}
+	Rayon
+	{{"\"" ~ category.name ~ "\""}}
+{% endblock %}
 {% block body %}
 	<div class="card col-md-12">
 		<div class="card-header">
