--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,6 +1,8 @@
 {# templates/Demo/hello.html.twig #}
 {% extends "base.html.twig" %}
-
+{% block title %}
+	Accueil
+{% endblock %}
 {% block body %}
 	<div class="card col-md-12">
 		<div class="card-header">
