--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,7 +35,7 @@
 
 				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
 
-				<button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+				<button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
 			</form>
 		</div>
 	</div>
