--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
-
+{% block title %}
+	Boutique
+{% endblock %}
 {% block body %}
 	<div class="card col-md-12">
 		<div class="card-header">
