--- a/templates/user/orders.html.twig
+++ b/templates/user/orders.html.twig
@@ -1,5 +1,7 @@
 {% set userOrders = app.user.getOrders()  %}
-
+{% block title %}
+	Mes commandes
+{% endblock %}
 {% extends "base.html.twig" %}
 {% block body %}
 	<div class="col-8 offset-2">
@@ -23,7 +25,7 @@
 						{% for userOrder in userOrders  %}
 							<tr class="text-danger" style='font-weight: bold;'>
 								<td>{{ userOrder.id }}</td>
-								<td>{{ userOrder.date | date('Y-m-d H:i:s', "Europe/Paris") }}</td>
+								<td>{{ userOrder.date | date('Y-m-d') }}</td>
 								<td>
 									<i class="fas fa-hourglass-half" data-toggle="tooltip" title="validation en Attente" data-placement="right"></i>
 								</td>
