--- a/templates/shop/department.html.twig
+++ b/templates/shop/department.html.twig
@@ -30,7 +30,9 @@
 							</p>
 							<h2>
 								<span class="badge badge-primary">
-									<i class="fas fa-cart-plus"></i>&nbsp;&nbsp;																																																																																																																																																																																																			                                    2,84 €
+									<i class="fas fa-cart-plus"></i>
+									{{ product.price }}
+									€
 								</span>
 							</h2>
 						</div>
